--- a/index.html
+++ b/index.html
@@ -2,10 +2,61 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css"></link>
     <title></title>
   </head>
   <body>
-    <h1>WASSSUP PLAYAA!!!</h2>
-      <p>My name is Joe Byrne</p>
+    <span class="columns container">
+      <span class="row1 column is-2 columns">
+        <div class="sqaures column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+      </span>
+      <span class="row2 column is-2 columns">
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+      </span>
+      <span class="row3 column is-2 columns">
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+      </span>
+      <span class="row4 column is-2 columns">
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+      </span>
+      <span class="row5 column is-2 columns">
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+      </span>
+      <span class="row6 column is-2 columns">
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+        <div class="squares column is-2"></div>
+      </span>
+    </span>
+    <button id="start">Start</button>
   </body>
+  <script src="script.js" charset="utf-8"></script>
 </html>
