better late then never

--- a/index.html
+++ b/index.html
@@ -6,57 +6,204 @@
     <title></title>
   </head>
   <body>
-    <span class="columns container">
-      <span class="row1 column is-2 columns">
-        <div class="sqaures column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-      </span>
-      <span class="row2 column is-2 columns">
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-      </span>
-      <span class="row3 column is-2 columns">
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-      </span>
-      <span class="row4 column is-2 columns">
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-      </span>
-      <span class="row5 column is-2 columns">
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-      </span>
-      <span class="row6 column is-2 columns">
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-        <div class="squares column is-2"></div>
-      </span>
-    </span>
-    <button id="start">Start</button>
+    <section class = "middlePage">
+      <div class = "mazePage columns">
+        <div class = "center">
+        <h1 class = "awesome">ISN'T THIS A-MAZE-ING</h1>
+        </div>
+        <div class = "column is-9 columns container">
+          <div class="row1 column is-1 columns">
+            <div id = '1' class="squares column is-1"></div>
+            <div id = '2' class="squares column is-1"></div>
+            <div id = '3' class="squares column is-1"></div>
+            <div id = '4' class="squares column is-1"></div>
+            <div id = '5' class="squares column is-1"></div>
+            <div id = '6' class="squares column is-1"></div>
+            <div id = '7' class="squares column is-1"></div>
+            <div id = '8' class="squares column is-1"></div>
+            <div id = '9' class="squares column is-1"></div>
+            <div id = '10' class="squares column is-1"></div>
+            <div id = '11' class="squares column is-1"></div>
+            <div id = '12' class="squares column is-1"></div>
+          </div>
+          <div class="row2 column is-1 columns">
+            <div id = '13' class="squares column is-1"></div>
+            <div id = '14' class="squares column is-1"></div>
+            <div id = '15' class="squares column is-1"></div>
+            <div id = '16' class="squares column is-1"></div>
+            <div id = '17' class="squares column is-1"></div>
+            <div id = '18' class="squares column is-1"></div>
+            <div id = '19' class="squares column is-1"></div>
+            <div id = '20' class="squares column is-1"></div>
+            <div id = '21' class="squares column is-1"></div>
+            <div id = '22' class="squares column is-1"></div>
+            <div id = '23' class="squares column is-1"></div>
+            <div id = '24' class="squares column is-1"></div>
+          </div>
+          <div class="row3 column is-1 columns">
+            <div id = '25' class="squares column is-1"></div>
+            <div id = '26' class="squares column is-1"></div>
+            <div id = '27' class="squares column is-1"></div>
+            <div id = '28' class="squares column is-1"></div>
+            <div id = '29' class="squares column is-1"></div>
+            <div id = '30' class="squares column is-1"></div>
+            <div id = '31' class="squares column is-1"></div>
+            <div id = '32' class="squares column is-1"></div>
+            <div id = '33' class="squares column is-1"></div>
+            <div id = '34' class="squares column is-1"></div>
+            <div id = '35' class="squares column is-1"></div>
+            <div id = '36' class="squares column is-1"></div>
+          </div>
+          <div class="row4 column is-1 columns">
+            <div id = '37' class="squares column is-1"></div>
+            <div id = '38' class="squares column is-1"></div>
+            <div id = '39' class="squares column is-1"></div>
+            <div id = '40' class="squares column is-1"></div>
+            <div id = '41' class="squares column is-1"></div>
+            <div id = '42' class="squares column is-1"></div>
+            <div id = '32' class="squares column is-1"></div>
+            <div id = '43' class="squares column is-1"></div>
+            <div id = '44' class="squares column is-1"></div>
+            <div id = '45' class="squares column is-1"></div>
+            <div id = '46' class="squares column is-1"></div>
+            <div id = '47' class="squares column is-1"></div>
+            <!-- <div id = '48' class="squares column is-1"></div> -->
+          </div>
+          <div class="row5 column is-1 columns">
+            <div id = '49' class="squares column is-1"></div>
+            <div id = '50' class="squares column is-1"></div>
+            <div id = '51' class="squares column is-1"></div>
+            <div id = '52' class="squares column is-1"></div>
+            <div id = '53' class="squares column is-1"></div>
+            <div id = '54' class="squares column is-1"></div>
+            <div id = '55' class="squares column is-1"></div>
+            <div id = '56' class="squares column is-1"></div>
+            <div id = '57' class="squares column is-1"></div>
+            <div id = '58' class="squares column is-1"></div>
+            <div id = '59' class="squares column is-1"></div>
+            <div id = '60' class="squares column is-1"></div>
+          </div>
+          <div class="row6 column is-1 columns">
+            <div id = '61' class="squares column is-1"></div>
+            <div id = '62' class="squares column is-1"></div>
+            <div id = '63' class="squares column is-1"></div>
+            <div id = '64' class="squares column is-1"></div>
+            <div id = '65' class="squares column is-1"></div>
+            <div id = '66' class="squares column is-1"></div>
+            <div id = '67' class="squares column is-1"></div>
+            <div id = '68' class="squares column is-1"></div>
+            <div id = '69' class="squares column is-1"></div>
+            <div id = '70' class="squares column is-1"></div>
+            <div id = '71' class="squares column is-1"></div>
+            <div id = '72' class="squares column is-1"></div>
+
+          </div>
+          <div class="row7 column is-1 columns">
+            <div id = '73' class="squares column is-1"></div>
+            <div id = '74' class="squares column is-1"></div>
+            <div id = '75' class="squares column is-1"></div>
+            <div id = '76' class="squares column is-1"></div>
+            <div id = '77' class="squares column is-1"></div>
+            <div id = '78' class="squares column is-1"></div>
+            <div id = '79' class="squares column is-1"></div>
+            <div id = '80' class="squares column is-1"></div>
+            <div id = '81' class="squares column is-1"></div>
+            <div id = '82' class="squares column is-1"></div>
+            <div id = '83' class="squares column is-1"></div>
+            <div id = '84' class="squares column is-1"></div>
+          </div>
+          <div class="row8 column is-1 columns">
+            <div id = '85' class="squares column is-1"></div>
+            <div id = '86' class="squares column is-1"></div>
+            <div id = '87' class="squares column is-1"></div>
+            <div id = '88' class="squares column is-1"></div>
+            <div id = '89' class="squares column is-1"></div>
+            <div id = '90' class="squares column is-1"></div>
+            <div id = '91' class="squares column is-1"></div>
+            <div id = '92' class="squares column is-1"></div>
+            <div id = '93' class="squares column is-1"></div>
+            <div id = '94' class="squares column is-1"></div>
+            <div id = '95' class="squares column is-1"></div>
+            <div id = '96' class="squares column is-1"></div>
+          </div>
+          <div class="row9 column is-1 columns">
+            <div id = '97' class="squares column is-1"></div>
+            <div id = '98' class="squares column is-1"></div>
+            <div id = '99' class="squares column is-1"></div>
+            <div id = '100' class="squares column is-1"></div>
+            <div id = '101' class="squares column is-1"></div>
+            <div id = '102' class="squares column is-1"></div>
+            <div id = '103' class="squares column is-1"></div>
+            <div id = '104' class="squares column is-1"></div>
+            <div id = '105' class="squares column is-1"></div>
+            <div id = '106' class="squares column is-1"></div>
+            <div id = '107' class="squares column is-1"></div>
+            <div id = '108' class="squares column is-1"></div>
+          </div>
+          <div class="row10 column is-1 columns">
+            <div id = '109' class="squares column is-1"></div>
+            <div id = '110' class="squares column is-1"></div>
+            <div id = '111' class="squares column is-1"></div>
+            <div id = '112' class="squares column is-1"></div>
+            <div id = '113' class="squares column is-1"></div>
+            <div id = '114' class="squares column is-1"></div>
+            <div id = '115' class="squares column is-1"></div>
+            <div id = '116' class="squares column is-1"></div>
+            <div id = '117' class="squares column is-2"></div>
+            <div id = '118' class="squares column is-2"></div>
+            <div id = '119' class="squares column is-1"></div>
+            <div id = '120' class="squares column is-1"></div>
+          </div>
+          <div class="row11 column is-1 columns">
+            <div id = '121' class="squares column is-1"></div>
+            <div id = '122' class="squares column is-1"></div>
+            <div id = '123' class="squares column is-1"></div>
+            <div id = '124' class="squares column is-1"></div>
+            <div id = '125' class="squares column is-1"></div>
+            <div id = '126' class="squares column is-1"></div>
+            <div id = '127' class="squares column is-1"></div>
+            <div id = '128' class="squares column is-1"></div>
+            <div id = '129' class="squares column is-1"></div>
+            <div id = '130' class="squares column is-1"></div>
+            <div id = '131' class="squares column is-1"></div>
+            <div id = '132' class="squares column is-1"></div>
+          </div>
+          <div class="row12 column is-1 columns">
+            <div id = '133' class="squares column is-1"></div>
+            <div id = '134' class="squares column is-1"></div>
+            <div id = '135' class="squares column is-1"></div>
+            <div id = '136' class="squares column is-1"></div>
+            <div id = '137' class="squares column is-1"></div>
+            <div id = '138' class="squares column is-1"></div>
+            <div id = '139' class="squares column is-1"></div>
+            <div id = '140' class="squares column is-1"></div>
+            <div id = '141' class="squares column is-1"></div>
+            <div id = '142' class="squares column is-1"></div>
+            <div id = '143' class="squares column is-1"></div>
+            <div id = 'startingSquare' class="squares column is-1"></div>
+          </div>
+        </div>
+        <!-- <section class = "buttons"> -->
+        <button class = "columns is-1.5" id="timer">0:00</button>
+        <button class = "columns is-1.5 awesome" id="start">Select Difficulty</button>
+        <!-- </section> -->
+      </div>
+    </section>
+    <nav class = "lastPage">
+      <h2 class = "congrats">Congratulations, you're score was</h2>
+      <nav class = "score"></nav>
+      <!-- <button class = "resetButton">RESET</button> -->
+    </nav>
+    <!-- Sounds -->
+    <audio id = "booing" src = "./sounds/boo.wav"></audio>
+    <audio id = "wellDone" src = "./sounds/welldone.wav"></audio>
+    <audio id = "themeTune" src = "./sounds/themeTune.wav"></audio>
+
+    <nav class = "gameOverPage">
+      <h2 class = "loser">Oh no! You lose, press the reset button if you would like to try again</h2>
+      <button class = "resetButton">RESET</button>
+    </nav>
+    <script src="script.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
   </body>
-  <script src="script.js" charset="utf-8"></script>
 </html>
