last push before present

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <audio id = "themeTune" src = "./sounds/themeTune.wav"></audio>
 
     <nav class = "gameOverPage">
-      <h2 class = "loser">Oh no! You lose, press the reset button if you would like to try again</h2>
+      <h2 class = "loser">Oh no! press the reset button if you would like to try again</h2>
       <button class = "resetButton">RESET</button>
     </nav>
     <script src="script.js" charset="utf-8"></script>
